--- a/src/main/resources/docgen/templates/beir-v1.0.0-fever-splade-distil-cocodenser-medium.template
+++ b/src/main/resources/docgen/templates/beir-v1.0.0-fever-splade-distil-cocodenser-medium.template
@@ -23,18 +23,17 @@ For details on how to train SPLADE-distil CoCodenser Medium and perform inferenc
 Download the corpus and unpack into `collections/`:
 
 ```
-wget https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/collections/beir-v1.0.0/splade_distil_cocodenser_medium/fever.tar -P collections/
-
-tar xvf collections/fever.tar -C collections/beir-v1.0.0/splade_distil_cocodenser_medium/fever
+wget https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/beir-v1.0.0-splade_distil_cocodenser_medium-fever.tar -P collections/
+tar xvf collections/beir-v1.0.0-splade_distil_cocodenser_medium-fever.tar -C collections/
 ```
 
-To confirm, `fever.tar` is 3.2 GB and has MD5 checksum `dcc9c7e61df122781e872e6e8ded7a3e`.
+To confirm, `fever.tar` is 3.2 GB and has MD5 checksum `d5bd33563877667a64d37acbf16f5c5d`.
 
 With the corpus downloaded, the following command will perform the complete regression, end to end, on any machine:
 
 ```
 python src/main/python/run_regression.py --index --verify --search --regression ${test_name} \
-  --corpus-path collections/${corpus}
+  --corpus-path collections/beir-v1.0.0-splade_distil_cocodenser_medium-fever
 ```
 
 Alternatively, you can simply copy/paste from the commands below and obtain the same results.
