--- a/src/main/resources/docgen/templates/beir-v1.0.0-nfcorpus-splade-distil-cocodenser-medium.template
+++ b/src/main/resources/docgen/templates/beir-v1.0.0-nfcorpus-splade-distil-cocodenser-medium.template
@@ -23,18 +23,17 @@ For details on how to train SPLADE-distil CoCodenser Medium and perform inferenc
 Download the corpus and unpack into `collections/`:
 
 ```
-wget https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/collections/beir-v1.0.0/splade_distil_cocodenser_medium/nfcorpus.tar -P collections/
-
-tar xvf collections/nfcorpus.tar -C collections/beir-v1.0.0/splade_distil_cocodenser_medium/nfcorpus
+wget https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/beir-v1.0.0-splade_distil_cocodenser_medium-hotpotqa.tar -P collections/
+tar xvf collections/beir-v1.0.0-splade_distil_cocodenser_medium-hotpotqa.tar -C collections/
 ```
 
-To confirm, `nfcorpus.tar` is 3.2 MB and has MD5 checksum `e77855ca06a96206d97b1d9e3a2ee2a8`.
+To confirm, `nfcorpus.tar` is 3.2 MB and has MD5 checksum `81215d1fd44c378b44c5b1f4ab555098`.
 
 With the corpus downloaded, the following command will perform the complete regression, end to end, on any machine:
 
 ```
 python src/main/python/run_regression.py --index --verify --search --regression ${test_name} \
-  --corpus-path collections/${corpus}
+  --corpus-path collections/beir-v1.0.0-splade_distil_cocodenser_medium-hotpotqa
 ```
 
 Alternatively, you can simply copy/paste from the commands below and obtain the same results.
