--- a/src/main/resources/docgen/templates/beir-v1.0.0-webis-touche2020-splade-distil-cocodenser-medium.template
+++ b/src/main/resources/docgen/templates/beir-v1.0.0-webis-touche2020-splade-distil-cocodenser-medium.template
@@ -23,18 +23,17 @@ For details on how to train SPLADE-distil CoCodenser Medium and perform inferenc
 Download the corpus and unpack into `collections/`:
 
 ```
-wget https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/collections/beir-v1.0.0/splade_distil_cocodenser_medium/webis-touche2020.tar -P collections/
-
-tar xvf collections/webis-touche2020.tar -C collections/beir-v1.0.0/splade_distil_cocodenser_medium/webis-touche2020
+wget https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/beir-v1.0.0-splade_distil_cocodenser_medium-webis-touche2020.tar -P collections/
+tar xvf collections/beir-v1.0.0-splade_distil_cocodenser_medium-webis-touche2020.tar -C collections/
 ```
 
-To confirm, `webis-touche2020.tar` is 293 MB and has MD5 checksum `526ade9107d188bbd912ebd0f8313aec`.
+To confirm, `webis-touche2020.tar` is 293 MB and has MD5 checksum `cb8486c7b1bf9b8ff7a14aedf9074c58`.
 
 With the corpus downloaded, the following command will perform the complete regression, end to end, on any machine:
 
 ```
 python src/main/python/run_regression.py --index --verify --search --regression ${test_name} \
-  --corpus-path collections/${corpus}
+  --corpus-path collections/beir-v1.0.0-splade_distil_cocodenser_medium-webis-touche2020
 ```
 
 Alternatively, you can simply copy/paste from the commands below and obtain the same results.
