--- a/src/main/resources/docgen/templates/beir-v1.0.0-fiqa-splade-distil-cocodenser-medium.template
+++ b/src/main/resources/docgen/templates/beir-v1.0.0-fiqa-splade-distil-cocodenser-medium.template
@@ -11,7 +11,8 @@ Note that this page is automatically generated from [this template](${template})
 From one of our Waterloo servers (e.g., `orca`), the following command will perform the complete regression, end to end:
 
 ```
-python src/main/python/run_regression.py --index --verify --search --regression ${test_name}
+python src/main/python/run_regression.py --index --verify --search \
+  --regression ${test_name}
 ```
 
 ## Corpus
@@ -27,12 +28,13 @@ wget https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/beir-v1.0.0-splade_distil
 tar xvf collections/beir-v1.0.0-splade_distil_cocodenser_medium-fiqa.tar -C collections/
 ```
 
-To confirm, `fiqa.tar` is 3.2 GB and has MD5 checksum `781f7683b6e73971afd01df1650756bf`.
+To confirm, the tarball is 3.2 GB and has MD5 checksum `781f7683b6e73971afd01df1650756bf`.
 
 With the corpus downloaded, the following command will perform the complete regression, end to end, on any machine:
 
 ```
-python src/main/python/run_regression.py --index --verify --search --regression ${test_name} \
+python src/main/python/run_regression.py --index --verify --search \
+  --regression ${test_name} \
   --corpus-path collections/beir-v1.0.0-splade_distil_cocodenser_medium-fiqa
 ```
 
