--- a/src/main/resources/docgen/templates/msmarco-passage-splade-distil-cocodenser-medium.template
+++ b/src/main/resources/docgen/templates/msmarco-passage-splade-distil-cocodenser-medium.template
@@ -11,7 +11,8 @@ Note that this page is automatically generated from [this template](${template})
 From one of our Waterloo servers (e.g., `orca`), the following command will perform the complete regression, end to end:
 
 ```
-python src/main/python/run_regression.py --index --verify --search --regression ${test_name}
+python src/main/python/run_regression.py --index --verify --search \
+  --regression ${test_name}
 ```
 
 ## Corpus
@@ -23,18 +24,18 @@ For details on how to train SPLADE-distil CoCodenser Medium and perform inferenc
 Download the corpus and unpack into `collections/`:
 
 ```bash
-wget https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/collections/beir-v1.0.0/splade_distil_cocodenser_medium/msmarco.tar -P collections/
-
-tar xvf collections/msmarco.tar -C collections/
+wget https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/msmarco-passage-splade_distil_cocodenser_medium.tar -P collections/
+tar xvf collections/msmarco-passage-splade_distil_cocodenser_medium.tar -C collections/
 ```
 
-To confirm, `msmarco.tar` is 4.9 GB and has MD5 checksum `7ade4ffb3cd986f8467fc70d9a052d40`.
+To confirm, `msmarco.tar` is 4.9 GB and has MD5 checksum `54a81e855a7678bc83ecb3ecf1ac5c1c`.
 
 With the corpus downloaded, the following command will perform the complete regression, end to end, on any machine:
 
 ```
-python src/main/python/run_regression.py --index --verify --search --regression ${test_name} \
-  --corpus-path collections/${corpus}
+python src/main/python/run_regression.py --index --verify --search \
+  --regression ${test_name} \
+  --corpus-path collections/msmarco-passage-splade_distil_cocodenser_medium
 ```
 
 Alternatively, you can simply copy/paste from the commands below and obtain the same results.
