--- a/src/main/resources/regression/dl19-doc.yaml
+++ b/src/main/resources/regression/dl19-doc.yaml
@@ -76,6 +76,18 @@ models:
         - 0.4189
       R@1000:
         - 0.7503
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio
+    results:
+      AP@100:
+        - 0.2811
+      nDCG@10:
+        - 0.5256
+      R@100:
+        - 0.4261
+      R@1000:
+        - 0.7546
   - name: bm25-default+ax
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20
@@ -124,6 +136,18 @@ models:
         - 0.4186
       R@1000:
         - 0.7288
+  - name: bm25-tuned+rocchio
+    display: +Rocchio
+    params: -bm25 -bm25.k1 3.44 -bm25.b 0.87 -rocchio
+    results:
+      AP@100:
+        - 0.2683
+      nDCG@10:
+        - 0.5445
+      R@100:
+        - 0.4254
+      R@1000:
+        - 0.7371
   - name: bm25-tuned+ax
     display: +Ax
     params: -bm25 -bm25.k1 3.44 -bm25.b 0.87 -axiom -axiom.deterministic -rerankCutoff 20
