--- a/src/main/resources/regression/dl20-doc.yaml
+++ b/src/main/resources/regression/dl20-doc.yaml
@@ -76,6 +76,18 @@ models:
         - 0.6414
       R@1000:
         - 0.8257
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio
+    results:
+      AP@100:
+        - 0.4089
+      nDCG@10:
+        - 0.5192
+      R@100:
+        - 0.6425
+      R@1000:
+        - 0.8273
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 3.44 -bm25.b 0.87
@@ -100,6 +112,18 @@ models:
         - 0.5977
       R@1000:
         - 0.8116
+  - name: bm25-tuned+rocchio
+    display: +Rocchio
+    params: -bm25 -bm25.k1 3.44 -bm25.b 0.87 -rocchio
+    results:
+      AP@100:
+        - 0.3634
+      nDCG@10:
+        - 0.5070
+      R@100:
+        - 0.6057
+      R@1000:
+        - 0.8199
   - name: bm25-tuned2
     display: BM25 (tuned2)
     params: -bm25 -bm25.k1 4.46 -bm25.b 0.82
@@ -124,3 +148,15 @@ models:
         - 0.5995
       R@1000:
         - 0.8180
+  - name: bm25-tuned2+rocchio
+    display: +Rocchio
+    params: -bm25 -bm25.k1 4.46 -bm25.b 0.82 -rocchio
+    results:
+      AP@100:
+        - 0.3628
+      nDCG@10:
+        - 0.5199
+      R@100:
+        - 0.6017
+      R@1000:
+        - 0.8217
