--- a/src/main/resources/regression/msmarco-doc.yaml
+++ b/src/main/resources/regression/msmarco-doc.yaml
@@ -76,6 +76,18 @@ models:
         - 0.6767
       R@1000:
         - 0.8791
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio
+    results:
+      AP@1000:
+        - 0.1632
+      RR@100:
+        - 0.1624
+      R@100:
+        - 0.6763
+      R@1000:
+        - 0.8789
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 3.44 -bm25.b 0.87
@@ -100,6 +112,18 @@ models:
         - 0.7878
       R@1000:
         - 0.9314
+  - name: bm25-tuned+rocchio
+    display: +Rocchio
+    params: -bm25 -bm25.k1 3.44 -bm25.b 0.87 -rocchio
+    results:
+      AP@1000:
+        - 0.2280
+      RR@100:
+        - 0.2274
+      R@100:
+        - 0.7901
+      R@1000:
+        - 0.9334
   - name: bm25-tuned2
     display: BM25 (tuned2)
     params: -bm25 -bm25.k1 4.46 -bm25.b 0.82
@@ -124,3 +148,15 @@ models:
         - 0.7791
       R@1000:
         - 0.9305
+  - name: bm25-tuned2+rocchio
+    display: +Rocchio
+    params: -bm25 -bm25.k1 4.46 -bm25.b 0.82 -rocchio
+    results:
+      AP@1000:
+        - 0.2248
+      RR@100:
+        - 0.2242
+      R@100:
+        - 0.7878
+      R@1000:
+        - 0.9316
