--- a/src/main/resources/regression/dl19-doc-segmented.yaml
+++ b/src/main/resources/regression/dl19-doc-segmented.yaml
@@ -76,6 +76,18 @@ models:
         - 0.4355
       R@1000:
         - 0.7384
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      AP@100:
+        - 0.2889
+      nDCG@10:
+        - 0.5570
+      R@100:
+        - 0.4415
+      R@1000:
+        - 0.7423
   - name: bm25-default+ax
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
@@ -124,6 +136,18 @@ models:
         - 0.4133
       R@1000:
         - 0.7030
+  - name: bm25-tuned+rocchio
+    display: +Rocchio
+    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      AP@100:
+        - 0.2677
+      nDCG@10:
+        - 0.5424
+      R@100:
+        - 0.4107
+      R@1000:
+        - 0.7115
   - name: bm25-tuned+ax
     display: +Ax
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
