--- a/src/main/resources/regression/dl20-doc-segmented.yaml
+++ b/src/main/resources/regression/dl20-doc-segmented.yaml
@@ -76,6 +76,18 @@ models:
         - 0.6224
       R@1000:
         - 0.8041
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      AP@100:
+        - 0.3830
+      nDCG@10:
+        - 0.5226
+      R@100:
+        - 0.6291
+      R@1000:
+        - 0.8102
   - name: bm25-default+ax
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
@@ -124,6 +136,18 @@ models:
         - 0.6025
       R@1000:
         - 0.8049
+  - name: bm25-tuned+rocchio
+    display: +Rocchio
+    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      AP@100:
+        - 0.3521
+      nDCG@10:
+        - 0.4997
+      R@100:
+        - 0.5995
+      R@1000:
+        - 0.8042
   - name: bm25-tuned+ax
     display: +Ax
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
