--- a/src/main/resources/regression/msmarco-doc-segmented.yaml
+++ b/src/main/resources/regression/msmarco-doc-segmented.yaml
@@ -76,6 +76,18 @@ models:
         - 0.7882
       R@1000:
         - 0.9355
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      AP@1000:
+        - 0.2455
+      RR@100:
+        - 0.2449
+      R@100:
+        - 0.7915
+      R@1000:
+        - 0.9351
   - name: bm25-default+ax
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
@@ -124,6 +136,18 @@ models:
         - 0.7961
       R@1000:
         - 0.9363
+  - name: bm25-tuned+rocchio
+    display: +Rocchio
+    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      AP@1000:
+        - 0.2482
+      RR@100:
+        - 0.2476
+      R@100:
+        - 0.8013
+      R@1000:
+        - 0.9395
   - name: bm25-tuned+ax
     display: +Ax
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
