--- a/src/main/resources/regression/msmarco-passage.yaml
+++ b/src/main/resources/regression/msmarco-passage.yaml
@@ -76,6 +76,18 @@ models:
         - 0.6494
       R@1000:
         - 0.8606
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio
+    results:
+      AP@1000:
+        - 0.1692
+      RR@10:
+        - 0.1597
+      R@100:
+        - 0.6552
+      R@1000:
+        - 0.8620
   - name: bm25-default+ax
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20
@@ -124,6 +136,18 @@ models:
         - 0.6655
       R@1000:
         - 0.8687
+  - name: bm25-tuned+rocchio
+    display: +Rocchio
+    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rocchio
+    results:
+      AP@1000:
+        - 0.1777
+      RR@10:
+        - 0.1685
+      R@100:
+        - 0.6702
+      R@1000:
+        - 0.8726
   - name: bm25-tuned+ax
     display: +Ax
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -axiom -axiom.deterministic -rerankCutoff 20
