--- a/src/main/resources/regression/beir-v1.0.0-arguana-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-arguana-flat.yaml
@@ -1,15 +1,15 @@
 ---
-corpus: beir-v1.0.0-climate-fever
-corpus_path: collections/beir-v1.0.0/corpus/climate-fever/
-index_path: indexes/lucene-index.beir-v1.0.0-climate-fever-bm25-flat/
+corpus: beir-v1.0.0-arguana
+corpus_path: collections/beir-v1.0.0/corpus/arguana/
+index_path: indexes/lucene-index.beir-v1.0.0-arguana-flat/
 collection_class: BeirCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
-  documents: 5416593
-  documents (non-empty): 5416593
-  total terms: 325185077
+  documents: 8674
+  documents (non-empty): 8673
+  total terms: 969528
 metrics:
   - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -36,19 +36,19 @@ topic_reader: TsvString
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "BEIR (v1.0.0): climate-fever"
+  - name: "BEIR (v1.0.0): arguana"
     id: beir
-    path: topics.beir-v1.0.0-climate-fever.test.tsv.gz
-    qrel: qrels.beir-v1.0.0-climate-fever.test.txt
+    path: topics.beir-v1.0.0-arguana.test.tsv.gz
+    qrel: qrels.beir-v1.0.0-arguana.test.txt
 
 models:
-  - name: bm25-flat-default
+  - name: flat-default
     display: BM25-flat (default)
     params: -bm25 -removeQuery -hits 1000
     results:
       nDCG@10:
-        - 0.1651
+        - 0.3970
       R@100:
-        - 0.4249
+        - 0.9324
       R@1000:
-        - 0.6324
+        - 0.9872
