--- a/src/main/resources/regression/beir-v1.0.0-climate-fever-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-climate-fever-flat.yaml
@@ -1,15 +1,15 @@
 ---
-corpus: beir-v1.0.0-hotpotqa
-corpus_path: collections/beir-v1.0.0/corpus/hotpotqa/
-index_path: indexes/lucene-index.beir-v1.0.0-hotpotqa-bm25-flat/
+corpus: beir-v1.0.0-climate-fever
+corpus_path: collections/beir-v1.0.0/corpus/climate-fever/
+index_path: indexes/lucene-index.beir-v1.0.0-climate-fever-flat/
 collection_class: BeirCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
-  documents: 5233329
-  documents (non-empty): 5233328
-  total terms: 172477063
+  documents: 5416593
+  documents (non-empty): 5416593
+  total terms: 325185077
 metrics:
   - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -36,19 +36,19 @@ topic_reader: TsvString
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "BEIR (v1.0.0): hotpotqa"
+  - name: "BEIR (v1.0.0): climate-fever"
     id: beir
-    path: topics.beir-v1.0.0-hotpotqa.test.tsv.gz
-    qrel: qrels.beir-v1.0.0-hotpotqa.test.txt
+    path: topics.beir-v1.0.0-climate-fever.test.tsv.gz
+    qrel: qrels.beir-v1.0.0-climate-fever.test.txt
 
 models:
-  - name: bm25-flat-default
+  - name: flat-default
     display: BM25-flat (default)
     params: -bm25 -removeQuery -hits 1000
     results:
       nDCG@10:
-        - 0.6330
+        - 0.1651
       R@100:
-        - 0.7957
+        - 0.4249
       R@1000:
-        - 0.8820
+        - 0.6324
