--- a/src/main/resources/regression/beir-v1.0.0-dbpedia-entity-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-dbpedia-entity-flat.yaml
@@ -1,15 +1,15 @@
 ---
-corpus: beir-v1.0.0-quora
-corpus_path: collections/beir-v1.0.0/corpus/quora/
-index_path: indexes/lucene-index.beir-v1.0.0-quora-bm25-flat/
+corpus: beir-v1.0.0-dbpedia-entity
+corpus_path: collections/beir-v1.0.0/corpus/dbpedia-entity/
+index_path: indexes/lucene-index.beir-v1.0.0-dbpedia-entity-flat/
 collection_class: BeirCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
-  documents: 522931
-  documents (non-empty): 522913
-  total terms: 4390852
+  documents: 4635922
+  documents (non-empty): 4635922
+  total terms: 164794987
 metrics:
   - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -36,19 +36,19 @@ topic_reader: TsvString
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "BEIR (v1.0.0): quora"
+  - name: "BEIR (v1.0.0): dbpedia-entity"
     id: beir
-    path: topics.beir-v1.0.0-quora.test.tsv.gz
-    qrel: qrels.beir-v1.0.0-quora.test.txt
+    path: topics.beir-v1.0.0-dbpedia-entity.test.tsv.gz
+    qrel: qrels.beir-v1.0.0-dbpedia-entity.test.txt
 
 models:
-  - name: bm25-flat-default
+  - name: flat-default
     display: BM25-flat (default)
     params: -bm25 -removeQuery -hits 1000
     results:
       nDCG@10:
-        - 0.7886
+        - 0.3180
       R@100:
-        - 0.9733
+        - 0.4682
       R@1000:
-        - 0.9950
+        - 0.6760
