--- a/src/main/resources/regression/beir-v1.0.0-fever-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-fever-flat.yaml
@@ -1,15 +1,15 @@
 ---
-corpus: beir-v1.0.0-webis-touche2020
-corpus_path: collections/beir-v1.0.0/corpus/webis-touche2020/
-index_path: indexes/lucene-index.beir-v1.0.0-webis-touche2020-bm25-flat/
+corpus: beir-v1.0.0-fever
+corpus_path: collections/beir-v1.0.0/corpus/fever/
+index_path: indexes/lucene-index.beir-v1.0.0-fever-flat/
 collection_class: BeirCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
-  documents: 382545
-  documents (non-empty): 382543
-  total terms: 76082209
+  documents: 5416568
+  documents (non-empty): 5416568
+  total terms: 325179170
 metrics:
   - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -36,19 +36,19 @@ topic_reader: TsvString
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "BEIR (v1.0.0): webis-touche2020"
+  - name: "BEIR (v1.0.0): fever"
     id: beir
-    path: topics.beir-v1.0.0-webis-touche2020.test.tsv.gz
-    qrel: qrels.beir-v1.0.0-webis-touche2020.test.txt
+    path: topics.beir-v1.0.0-fever.test.tsv.gz
+    qrel: qrels.beir-v1.0.0-fever.test.txt
 
 models:
-  - name: bm25-flat-default
+  - name: flat-default
     display: BM25-flat (default)
     params: -bm25 -removeQuery -hits 1000
     results:
       nDCG@10:
-        - 0.4422
+        - 0.6513
       R@100:
-        - 0.5822
+        - 0.9185
       R@1000:
-        - 0.8621
+        - 0.9589
