--- a/src/main/resources/regression/beir-v1.0.0-fiqa-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-fiqa-flat.yaml
@@ -1,15 +1,15 @@
 ---
-corpus: beir-v1.0.0-scidocs
-corpus_path: collections/beir-v1.0.0/corpus/scidocs/
-index_path: indexes/lucene-index.beir-v1.0.0-scidocs-bm25-flat/
+corpus: beir-v1.0.0-fiqa
+corpus_path: collections/beir-v1.0.0/corpus/fiqa/
+index_path: indexes/lucene-index.beir-v1.0.0-fiqa-flat/
 collection_class: BeirCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
-  documents: 25657
-  documents (non-empty): 25657
-  total terms: 3266767
+  documents: 57600
+  documents (non-empty): 57600
+  total terms: 5288635
 metrics:
   - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -36,19 +36,19 @@ topic_reader: TsvString
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "BEIR (v1.0.0): scidocs"
+  - name: "BEIR (v1.0.0): fiqa"
     id: beir
-    path: topics.beir-v1.0.0-scidocs.test.tsv.gz
-    qrel: qrels.beir-v1.0.0-scidocs.test.txt
+    path: topics.beir-v1.0.0-fiqa.test.tsv.gz
+    qrel: qrels.beir-v1.0.0-fiqa.test.txt
 
 models:
-  - name: bm25-flat-default
+  - name: flat-default
     display: BM25-flat (default)
     params: -bm25 -removeQuery -hits 1000
     results:
       nDCG@10:
-        - 0.1490
+        - 0.2361
       R@100:
-        - 0.3477
+        - 0.5395
       R@1000:
-        - 0.5638
+        - 0.7393
