--- a/src/main/resources/regression/beir-v1.0.0-nfcorpus-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-nfcorpus-flat.yaml
@@ -1,15 +1,15 @@
 ---
-corpus: beir-v1.0.0-arguana
-corpus_path: collections/beir-v1.0.0/corpus/arguana/
-index_path: indexes/lucene-index.beir-v1.0.0-arguana-bm25-flat/
+corpus: beir-v1.0.0-nfcorpus
+corpus_path: collections/beir-v1.0.0/corpus/nfcorpus/
+index_path: indexes/lucene-index.beir-v1.0.0-nfcorpus-flat/
 collection_class: BeirCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
-  documents: 8674
-  documents (non-empty): 8673
-  total terms: 969528
+  documents: 3633
+  documents (non-empty): 3633
+  total terms: 637485
 metrics:
   - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -36,19 +36,19 @@ topic_reader: TsvString
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "BEIR (v1.0.0): arguana"
+  - name: "BEIR (v1.0.0): nfcorpus"
     id: beir
-    path: topics.beir-v1.0.0-arguana.test.tsv.gz
-    qrel: qrels.beir-v1.0.0-arguana.test.txt
+    path: topics.beir-v1.0.0-nfcorpus.test.tsv.gz
+    qrel: qrels.beir-v1.0.0-nfcorpus.test.txt
 
 models:
-  - name: bm25-flat-default
+  - name: flat-default
     display: BM25-flat (default)
     params: -bm25 -removeQuery -hits 1000
     results:
       nDCG@10:
-        - 0.3970
+        - 0.3218
       R@100:
-        - 0.9324
+        - 0.2457
       R@1000:
-        - 0.9872
+        - 0.3704
