--- a/src/main/resources/regression/beir-v1.0.0-nq-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-nq-flat.yaml
@@ -1,15 +1,15 @@
 ---
-corpus: beir-v1.0.0-dbpedia-entity
-corpus_path: collections/beir-v1.0.0/corpus/dbpedia-entity/
-index_path: indexes/lucene-index.beir-v1.0.0-dbpedia-entity-bm25-flat/
+corpus: beir-v1.0.0-nq
+corpus_path: collections/beir-v1.0.0/corpus/nq/
+index_path: indexes/lucene-index.beir-v1.0.0-nq-flat/
 collection_class: BeirCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
-  documents: 4635922
-  documents (non-empty): 4635922
-  total terms: 164794987
+  documents: 2681468
+  documents (non-empty): 2681468
+  total terms: 151249287
 metrics:
   - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -36,19 +36,19 @@ topic_reader: TsvString
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "BEIR (v1.0.0): dbpedia-entity"
+  - name: "BEIR (v1.0.0): nq"
     id: beir
-    path: topics.beir-v1.0.0-dbpedia-entity.test.tsv.gz
-    qrel: qrels.beir-v1.0.0-dbpedia-entity.test.txt
+    path: topics.beir-v1.0.0-nq.test.tsv.gz
+    qrel: qrels.beir-v1.0.0-nq.test.txt
 
 models:
-  - name: bm25-flat-default
+  - name: flat-default
     display: BM25-flat (default)
     params: -bm25 -removeQuery -hits 1000
     results:
       nDCG@10:
-        - 0.3180
+        - 0.3055
       R@100:
-        - 0.4682
+        - 0.7513
       R@1000:
-        - 0.6760
+        - 0.8958
