--- a/src/main/resources/regression/beir-v1.0.0-scifact-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-scifact-flat.yaml
@@ -1,5 +1,5 @@
 ---
-corpus: beir-v1.0.0-scifact
+corpus: beir-v1.0.0-scifact-flat
 corpus_path: collections/beir-v1.0.0/corpus/scifact/
 
 index_path: indexes/lucene-index.beir-v1.0.0-scifact-flat/
