--- a/src/main/resources/docgen/templates/beir-v1.0.0-arguana-multifield.template
+++ b/src/main/resources/docgen/templates/beir-v1.0.0-arguana-multifield.template
@@ -1,7 +1,8 @@
-# Anserini Regressions: BEIR (v1.0.0) &mdash; nq
+# Anserini Regressions: BEIR (v1.0.0) &mdash; arguana
 
-This page documents BM25 regression experiments for [BEIR (v1.0.0) &mdash; nq](http://beir.ai/).
-These experiments index the corpus in a "flat" manner, by concatenating the "title" and "text" into the "contents" field.
+This page documents BM25 regression experiments for [BEIR (v1.0.0) &mdash; arguana](http://beir.ai/).
+These experiments index the "title" and "text" fields in corpus separately.
+At retrieval time, a query is issued across both fields (equally weighted).
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
 Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
