--- a/src/main/resources/regression/beir-v1.0.0-arguana-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-arguana-flat.yaml
@@ -1,5 +1,5 @@
 ---
-corpus: beir-v1.0.0-arguana
+corpus: beir-v1.0.0-arguana-flat
 corpus_path: collections/beir-v1.0.0/corpus/arguana/
 
 index_path: indexes/lucene-index.beir-v1.0.0-arguana-flat/
