--- a/src/main/resources/regression/beir-v1.0.0-arguana-splade-distil-cocodenser-medium.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-arguana-splade-distil-cocodenser-medium.yaml
@@ -1,5 +1,5 @@
 ---
-corpus: beir-v1.0.0-arguana
+corpus: beir-v1.0.0-arguana-splade_distil_cocodenser_medium
 corpus_path: collections/beir-v1.0.0/splade_distil_cocodenser_medium/arguana
 
 index_path: indexes/lucene-index.beir-v1.0.0-arguana-splade_distil_cocodenser_medium/
