--- a/src/main/resources/regression/beir-v1.0.0-climate-fever-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-climate-fever-flat.yaml
@@ -1,5 +1,5 @@
 ---
-corpus: beir-v1.0.0-climate-fever
+corpus: beir-v1.0.0-climate-fever-flat
 corpus_path: collections/beir-v1.0.0/corpus/climate-fever/
 
 index_path: indexes/lucene-index.beir-v1.0.0-climate-fever-flat/
