--- a/src/main/resources/regression/beir-v1.0.0-dbpedia-entity-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-dbpedia-entity-flat.yaml
@@ -1,5 +1,5 @@
 ---
-corpus: beir-v1.0.0-dbpedia-entity
+corpus: beir-v1.0.0-dbpedia-entity-flat
 corpus_path: collections/beir-v1.0.0/corpus/dbpedia-entity/
 
 index_path: indexes/lucene-index.beir-v1.0.0-dbpedia-entity-flat/
