--- a/src/main/resources/regression/beir-v1.0.0-fiqa-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-fiqa-flat.yaml
@@ -1,5 +1,5 @@
 ---
-corpus: beir-v1.0.0-fiqa
+corpus: beir-v1.0.0-fiqa-flat
 corpus_path: collections/beir-v1.0.0/corpus/fiqa/
 
 index_path: indexes/lucene-index.beir-v1.0.0-fiqa-flat/
