--- a/src/main/resources/regression/beir-v1.0.0-hotpotqa-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-hotpotqa-flat.yaml
@@ -1,5 +1,5 @@
 ---
-corpus: beir-v1.0.0-hotpotqa
+corpus: beir-v1.0.0-hotpotqa-flat
 corpus_path: collections/beir-v1.0.0/corpus/hotpotqa/
 
 index_path: indexes/lucene-index.beir-v1.0.0-hotpotqa-flat/
