--- a/src/main/resources/regression/beir-v1.0.0-nfcorpus-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-nfcorpus-flat.yaml
@@ -1,5 +1,5 @@
 ---
-corpus: beir-v1.0.0-nfcorpus
+corpus: beir-v1.0.0-nfcorpus-flat
 corpus_path: collections/beir-v1.0.0/corpus/nfcorpus/
 
 index_path: indexes/lucene-index.beir-v1.0.0-nfcorpus-flat/
