--- a/src/main/resources/regression/beir-v1.0.0-nq-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-nq-flat.yaml
@@ -1,5 +1,5 @@
 ---
-corpus: beir-v1.0.0-nq
+corpus: beir-v1.0.0-nq-flat
 corpus_path: collections/beir-v1.0.0/corpus/nq/
 
 index_path: indexes/lucene-index.beir-v1.0.0-nq-flat/
