--- a/src/main/resources/regression/beir-v1.0.0-scidocs-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-scidocs-flat.yaml
@@ -1,5 +1,5 @@
 ---
-corpus: beir-v1.0.0-scidocs
+corpus: beir-v1.0.0-scidocs-flat
 corpus_path: collections/beir-v1.0.0/corpus/scidocs/
 
 index_path: indexes/lucene-index.beir-v1.0.0-scidocs-flat/
