--- a/src/main/resources/regression/beir-v1.0.0-webis-touche2020-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-webis-touche2020-flat.yaml
@@ -1,5 +1,5 @@
 ---
-corpus: beir-v1.0.0-webis-touche2020
+corpus: beir-v1.0.0-webis-touche2020-flat
 corpus_path: collections/beir-v1.0.0/corpus/webis-touche2020/
 
 index_path: indexes/lucene-index.beir-v1.0.0-webis-touche2020-flat/
