--- a/src/main/resources/regression/dl21-passage-augmented.yaml
+++ b/src/main/resources/regression/dl21-passage-augmented.yaml
@@ -87,6 +87,20 @@ models:
         - 0.2795
       R@1000:
         - 0.6268
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio
+    results:
+      MAP@100:
+        - 0.1043
+      MRR@100:
+        - 0.4809
+      nDCG@10:
+        - 0.3817
+      R@100:
+        - 0.2819
+      R@1000:
+        - 0.6372
   - name: bm25-default+ax
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20
