--- a/src/main/resources/regression/msmarco-v2-doc-segmented.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented.yaml
@@ -88,6 +88,22 @@ models:
       R@1000:
         - 0.8605
         - 0.8633
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      MAP@100:
+        - 0.1660
+        - 0.1689
+      MRR@100:
+        - 0.1679
+        - 0.1710
+      R@100:
+        - 0.6535
+        - 0.6618
+      R@1000:
+        - 0.8659
+        - 0.8642
   - name: bm25-default+ax
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
