--- a/src/main/resources/regression/msmarco-v2-doc.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc.yaml
@@ -88,6 +88,22 @@ models:
       R@1000:
         - 0.7694
         - 0.7736
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio
+    results:
+      MAP@100:
+        - 0.0965
+        - 0.1037
+      MRR@100:
+        - 0.0974
+        - 0.1052
+      R@100:
+        - 0.5135
+        - 0.5259
+      R@1000:
+        - 0.7697
+        - 0.7762
   - name: bm25-default+ax
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20
