--- a/src/main/resources/regression/msmarco-v2-passage-augmented.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-augmented.yaml
@@ -88,6 +88,22 @@ models:
       R@1000:
         - 0.6859
         - 0.6838
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio
+    results:
+      MAP@100:
+        - 0.0665
+        - 0.0675
+      MRR@100:
+        - 0.0671
+        - 0.0684
+      R@100:
+        - 0.3755
+        - 0.3878
+      R@1000:
+        - 0.6912
+        - 0.6864
   - name: bm25-default+ax
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20
