--- a/src/main/resources/regression/msmarco-v2-passage.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage.yaml
@@ -88,6 +88,22 @@ models:
       R@1000:
         - 0.5933
         - 0.6049
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio
+    results:
+      MAP@100:
+        - 0.0625
+        - 0.0662
+      MRR@100:
+        - 0.0634
+        - 0.0670
+      R@100:
+        - 0.3415
+        - 0.3516
+      R@1000:
+        - 0.5966
+        - 0.6104
   - name: bm25-default+ax
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20
