Rearrange beir_v1.0.0 regression orders in README.md

--- a/src/main/resources/docgen/templates/beir-v1.0.0-cqadupstack-mathematica-flat.template
+++ b/src/main/resources/docgen/templates/beir-v1.0.0-cqadupstack-mathematica-flat.template
@@ -1,6 +1,6 @@
-# Anserini Regressions: BEIR (v1.0.0) &mdash; Cqadupstack-mathematica
+# Anserini Regressions: BEIR (v1.0.0) &mdash; CQADupStack-mathematica
 
-This page documents BM25 regression experiments for [BEIR (v1.0.0) &mdash; Cqadupstack-mathematica](http://beir.ai/).
+This page documents BM25 regression experiments for [BEIR (v1.0.0) &mdash; CQADupStack-Mathematica](http://beir.ai/).
 These experiments index the corpus in a "flat" manner, by concatenating the "title" and "text" into the "contents" field.
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
