Stubs of missing regressions.

--- a/src/main/resources/regression/dl21-passage-unicoil-noexp-0shot.yaml
+++ b/src/main/resources/regression/dl21-passage-unicoil-noexp-0shot.yaml
@@ -73,3 +73,19 @@ models:
         - 0.4246
       R@1000:
         - 0.6897
+  - name: bm25-default+rm3
+    display: +RM3
+    params: -bm25 -rm3
+    results:
+      MAP@100:
+        - 0.0611
+        - 0.0647
+      MRR@100:
+        - 0.0619
+        - 0.0654
+      R@100:
+        - 0.3377
+        - 0.3435
+      R@1000:
+        - 0.5933
+        - 0.6049
