--- a/src/main/resources/regression/msmarco-v2-passage-augmented-d2q-t5.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-augmented-d2q-t5.yaml
@@ -72,3 +72,19 @@ models:
       R@1000:
         - 0.7647
         - 0.7659
+  - name: bm25-default+rm3
+    display: +RM3
+    params: -bm25 -rm3
+    results:
+      MAP@100:
+        - 0.0611
+        - 0.0647
+      MRR@100:
+        - 0.0619
+        - 0.0654
+      R@100:
+        - 0.3377
+        - 0.3435
+      R@1000:
+        - 0.5933
+        - 0.6049
