--- a/src/main/resources/regression/msmarco-v2-doc-d2q-t5.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-d2q-t5.yaml
@@ -72,3 +72,19 @@ models:
       R@1000:
         - 0.8614
         - 0.8568
+  - name: bm25-default+rm3
+    display: +RM3
+    params: -bm25 -rm3
+    results:
+      MAP@100:
+        - 0.1128
+        - 0.1151
+      MRR@100:
+        - 0.1144
+        - 0.1169
+      R@100:
+        - 0.5935
+        - 0.5898
+      R@1000:
+        - 0.8189
+        - 0.8245
