--- a/src/main/resources/regression/msmarco-doc-docTTTTTquery.yaml
+++ b/src/main/resources/regression/msmarco-doc-docTTTTTquery.yaml
@@ -64,6 +64,18 @@ models:
         - 0.7993
       R@1000:
         - 0.9259
+  - name: bm25-default+rm3
+    display: +RM3
+    params: -bm25 -rm3
+    results:
+      AP@1000:
+        - 0.1839
+      RR@100:
+        - 0.1831
+      R@100:
+        - 0.7420
+      R@1000:
+        - 0.9128
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 4.68 -bm25.b 0.87
@@ -76,3 +88,15 @@ models:
         - 0.8612
       R@1000:
         - 0.9553
+  - name: bm25-tuned+rm3
+    display: +RM3
+    params: -bm25 -bm25.k1 4.68 -bm25.b 0.87 -rm3
+    results:
+      AP@1000:
+        - 0.2627
+      RR@100:
+        - 0.2621
+      R@100:
+        - 0.8379
+      R@1000:
+        - 0.9524
