--- a/src/main/resources/regression/msmarco-doc-segmented-docTTTTTquery.yaml
+++ b/src/main/resources/regression/msmarco-doc-segmented-docTTTTTquery.yaml
@@ -64,6 +64,18 @@ models:
         - 0.8479
       R@1000:
         - 0.9490
+  - name: bm25-default+rm3
+    display: +RM3
+    params: -bm25 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      AP@1000:
+        - 0.2823
+      RR@100:
+        - 0.2818
+      R@100:
+        - 0.8479
+      R@1000:
+        - 0.9547
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 2.56 -bm25.b 0.59 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
@@ -76,3 +88,15 @@ models:
         - 0.8627
       R@1000:
         - 0.9530
+  - name: bm25-tuned+rm3
+    display: +RM3
+    params: -bm25 -bm25.k1 2.56 -bm25.b 0.59 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      AP@1000:
+        - 0.2989
+      RR@100:
+        - 0.2985
+      R@100:
+        - 0.8556
+      R@1000:
+        - 0.9567
