Add regressions for RM3 on MS MARCO v1 and v2 w/ d2q (#1851)

--- a/src/main/resources/regression/msmarco-v2-passage-augmented-d2q-t5.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-augmented-d2q-t5.yaml
@@ -72,3 +72,19 @@ models:
       R@1000:
         - 0.7647
         - 0.7659
+  - name: bm25-default+rm3
+    display: +RM3
+    params: -bm25 -rm3
+    results:
+      MAP@100:
+        - 0.0870
+        - 0.0879
+      MRR@100:
+        - 0.0880
+        - 0.0887
+      R@100:
+        - 0.4742
+        - 0.4905
+      R@1000:
+        - 0.7625
+        - 0.7649
