--- a/src/main/resources/regression/msmarco-v2-passage-d2q-t5.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-d2q-t5.yaml
@@ -72,3 +72,19 @@ models:
       R@1000:
         - 0.7083
         - 0.7151
+  - name: bm25-default+rm3
+    display: +RM3
+    params: -bm25 -rm3
+    results:
+      MAP@100:
+        - 0.0939
+        - 0.0979
+      MRR@100:
+        - 0.0948
+        - 0.0985
+      R@100:
+        - 0.4723
+        - 0.4800
+      R@1000:
+        - 0.7174
+        - 0.7240
