--- a/src/main/resources/docgen/templates/beir-v1.0.0-arguana-wp.template
+++ b/src/main/resources/docgen/templates/beir-v1.0.0-arguana-wp.template
@@ -2,7 +2,7 @@
 
 This page documents BM25 regression experiments for [BEIR (v1.0.0) &mdash; ArguAna](http://beir.ai/).
 These experiments index the corpus in a "flat" manner, by concatenating the "title" and "text" into the "contents" field.
-All the documents and queries are pre-tokenized with bert-base-uncased tokenizer.
+All the documents and queries are pre-tokenized with `bert-base-uncased` tokenizer.
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
 Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
