--- a/src/main/resources/regression/beir-v1.0.0-trec-news-flat-wp.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-trec-news-flat-wp.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: beir-v1.0.0-cqadupstack-english-flat-wp
-corpus_path: collections/beir-v1.0.0/wp/cqadupstack-english/
+corpus: beir-v1.0.0-trec-news-flat-wp
+corpus_path: collections/beir-v1.0.0/wp/trec-news/
 
-index_path: indexes/lucene-index.beir-v1.0.0-cqadupstack-english-flat-wp/
+index_path: indexes/lucene-index.beir-v1.0.0-trec-news-flat-wp/
 collection_class: BeirFlatCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw -pretokenized
 index_stats:
-  documents: 40221
-  documents (non-empty): 40221
-  total terms: 4756152
+  documents: 594589
+  documents (non-empty): 594589
+  total terms: 533236405
 
 metrics:
   - metric: nDCG@10
@@ -39,10 +39,10 @@ topic_reader: TsvString
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "BEIR (v1.0.0): CQADupStack-english"
+  - name: "BEIR (v1.0.0): TREC-NEWS"
     id: test
-    path: topics.beir-v1.0.0-cqadupstack-english.test.wp.tsv.gz
-    qrel: qrels.beir-v1.0.0-cqadupstack-english.test.txt
+    path: topics.beir-v1.0.0-trec-news.test.wp.tsv.gz
+    qrel: qrels.beir-v1.0.0-trec-news.test.txt
 
 models:
   - name: bm25
@@ -50,8 +50,8 @@ models:
     params: -bm25 -removeQuery -pretokenized
     results:
       nDCG@10:
-        - 0.3457
+        - 0.3609
       R@100:
-        - 0.5544
+        - 0.3935
       R@1000:
-        - 0.7243
+        - 0.6719
