--- a/src/main/resources/docgen/templates/dl20-passage-unicoil.template
+++ b/src/main/resources/docgen/templates/dl20-passage-unicoil.template
@@ -27,7 +27,7 @@ Thus, no neural inference is involved.
 
 From any machine, the following command will download the corpus and perform the complete regression, end to end:
 
-```
+```bash
 python src/main/python/run_regression.py --download --index --verify --search --regression ${test_name}
 ```
 
@@ -49,8 +49,6 @@ With the corpus downloaded, the following command will perform the remaining ste
 python src/main/python/run_regression.py --index --verify --search --regression ${test_name} \
   --corpus-path collections/${corpus}
 ```
-
-Alternatively, you can simply copy/paste from the commands below and obtain the same results.
 
 ## Indexing
 
