--- a/src/main/resources/docgen/templates/dl21-passage-unicoil-0shot.template
+++ b/src/main/resources/docgen/templates/dl21-passage-unicoil-0shot.template
@@ -63,7 +63,7 @@ Sample indexing command:
 ${index_cmds}
 ```
 
-The path `/path/to/msmarco-v2-passage-unicoil-0shot/` should point to the corpus downloaded above.
+The path `/path/to/${corpus}/` should point to the corpus downloaded above.
 
 The important indexing options to note here are `-impact -pretokenized`: the first tells Anserini not to encode BM25 doclengths into Lucene's norms (which is the default) and the second option says not to apply any additional tokenization on the uniCOIL tokens.
 Upon completion, we should have an index with 138,364,198 documents.
