--- a/src/main/resources/docgen/templates/dl20-doc-segmented-unicoil-noexp.template
+++ b/src/main/resources/docgen/templates/dl20-doc-segmented-unicoil-noexp.template
@@ -56,7 +56,7 @@ Sample indexing command:
 ${index_cmds}
 ```
 
-The directory `/path/to/msmarco-doc-segmented-unicoil-noexp/` should point to the corpus downloaded above.
+The directory `/path/to/${corpus}/` should point to the corpus downloaded above.
 
 The important indexing options to note here are `-impact -pretokenized`: the first tells Anserini not to encode BM25 doclengths into Lucene's norms (which is the default) and the second option says not to apply any additional tokenization on the uniCOIL tokens.
 Upon completion, we should have an index with 20,545,677 documents.
